Overflow hidden fix on kiosk

--- a/src/app/features/am/am.component.scss
+++ b/src/app/features/am/am.component.scss
@@ -1,7 +1,4 @@
 :host {
-  body {
-    overflow: hidden;
-  }
   
   .overlay-message {
     width: 100%;
