--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ body {
 
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 @font-face {
